add event signup and attend functionality
